--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <main>
         <p>Este é um exemplo de site simples hospedado no GitHub Pages.</p>
     </main>
-    <footer>
+    <footer> <!--Rodapé -->
         <p>&copy; 2024 Meu Site</p>
     </footer>
     <script src="script.js"></script>
