--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <h1>Bem-vindo ao Meu Site!</h1>
-        <img src="img/logo.png" alt="Logo">
+        <img src="img/Screenshot(2).png" alt="Logo">
     </header>
     <main>
         <p>Este é um exemplo de site simples hospedado no GitHub Pages.</p>
