--- a/index.html
+++ b/index.html
@@ -9,7 +9,14 @@
 <body>
     <header>
         <h1>Bem-vindo ao Meu Site!</h1>
-        <img src="img/Screenshot(2).png" alt="Logo">
+        <! --<img src="img/Screenshot(2).png" alt="Logo">--> 
+        <nav> 
+            <ul>
+                <li><a href="index.html">Home</a> </li>
+                <li><a href="page1.html">Curriculo</a></li>
+                <li><a href="page2.html">Disciplinas</a></li>
+            </ul>
+        </nav>
     </header>
     <main>
         <p>Este é um exemplo de site simples hospedado no GitHub Pages.</p>
