--- a/index.html
+++ b/index.html
@@ -21,8 +21,21 @@
     <main>
         <p>Este é um exemplo de site simples hospedado no GitHub Pages.</p>
     </main>
+    <section class="hero">
+        <div class="hero-content">
+            <h2>Your Catchy Headline</h2>
+            <p>This is your compelling introduction.</p>
+            <a href="#about" class="btn">Learn More</a>
+        </div>
+    </section>
+    <section id="about" class="about-section">
+        <div class="about-content">
+            <h2>About Us</h2>
+            <p>This section can describe your company or project.</p>
+        </div>
+    </section>
     <footer> <!--Rodapé -->
-        <p>&copy; 2024 Meu Site</p>
+        <p>&copy; 2024 GILSON PEDROSO. Todos os direitos Reservados.</p>
     </footer>
     <script src="script.js"></script>
 </body>
