--- a/index.html
+++ b/index.html
@@ -1,42 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
+    
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portifolio - Gilson Pedroso</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
     <link rel="stylesheet" href="style.css">
+    <title>Portfolio Website</title>
 </head>
 <body>
     <header>
-        <h1>Bem-vindo ao Meu Site!</h1>
-        <! -- <img src="img/Screenshot(2).png" alt="Logo"> --> 
-        <nav> 
-            <ul>
-                <li><a href="index.html">Home</a> </li>
-                <li><a href="page1.html">Curriculo</a></li>
-                <li><a href="page2.html">Disciplinas</a></li>
-            </ul>
+        <a href="#" class="logo">Gilson</a>
+
+        <nav>
+            <a href="#" class="active"> Home</a>
+            <a href="#" >Serviços</a>
+            <a href="#" >Habilidades</a>
+            <a href="#" >Education</a>
+            <a href="#" >Experience</a>
+            <a href="#" >Contact</a>
         </nav>
     </header>
-    <main>
-        <p>Este é um exemplo de site simples hospedado no GitHub Pages.</p>
-    </main>
-    <section class="hero">
-        <div class="hero-content">
-            <h2>Your Catchy Headline</h2>
-            <p>This is your compelling introduction.</p>
-            <a href="#about" class="btn">Learn More</a>
+    <section class="home">
+        <div class="home-img">
+            <img src="main.jpg" alt="">
+        </div>
+        <div class="home-content">
+            <h1>Hi, It's <span>Alex</span></h1>
+            <h3 class="typing-text">I'm a <span></span></h3>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minus labore dolores esse. Odit similique doloribus tenetur doloremque, sunt commodi in ipsa repudiandae debitis deleniti blanditiis quibusdam quaerat neque asperiores ea.</p>
+            <div class="social-icons">
+                <a href="#"><i class="fa-brands fa-linkedin"></i></a>
+                <a href="#"><i class="fa-brands fa-github"></i></a>
+                <a href="#"><i class="fa-brands fa-x-twitter"></i></a>
+                <a href="#"><i class="fa-brands fa-instagram"></i></a>
+            </div>
+            <a href="#" class="btn">Hire me</a>
         </div>
     </section>
-    <section id="about" class="about-section">
-        <div class="about-content">
-            <h2>About Us</h2>
-            <p>This section can describe your company or project.</p>
-        </div>
-    </section>
-    <footer> <!--Rodapé -->
-        <p>&copy; 2024 GILSON PEDROSO. Todos os direitos Reservados.</p>
-    </footer>
-    <script src="script.js"></script>
 </body>
 </html>
