--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
     <link rel="stylesheet" href="style.css">
-    <title>Portfolio Website</title>
+    <title>GP - Gilson Pedroso</title>
 </head>
 <body>
     <header>
@@ -18,7 +18,7 @@
             <a href="#" >Habilidades</a>
             <a href="#" >Education</a>
             <a href="#" >Experience</a>
-            <a href="#" >Contact</a>
+            <a href="#" >Contatos</a>
         </nav>
     </header>
     <section class="home">
@@ -32,10 +32,10 @@
             <div class="social-icons">
                 <a href="#"><i class="fa-brands fa-linkedin"></i></a>
                 <a href="#"><i class="fa-brands fa-github"></i></a>
-                <a href="#"><i class="fa-brands fa-x-twitter"></i></a>
+                <a href="#"><i class="fa-brands fa-x-youtube"></i></a>
                 <a href="#"><i class="fa-brands fa-instagram"></i></a>
             </div>
-            <a href="#" class="btn">Hire me</a>
+            <a href="#" class="btn">Descubra Mais</a>
         </div>
     </section>
 </body>
