--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <div class="social-icons">
                 <a href="#"><i class="fa-brands fa-linkedin"></i></a>
                 <a href="#"><i class="fa-brands fa-github"></i></a>
-                <a href="#"><i class="fa-brands fa-x-youtube"></i></a>
+                <a href="#"><i class="fa-brands fa-youtube"></i></a>
                 <a href="#"><i class="fa-brands fa-instagram"></i></a>
             </div>
             <a href="#" class="btn">Descubra Mais</a>
