--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <img src="main.jpg" alt="">
         </div>
         <div class="home-content">
-            <h1>Hi, It's <span>Gilson</span></h1>
+            <h1>Olá, Eu sou <span>Gilson</span></h1>
             <h3 class="typing-text">Eu sou <span></span></h3>
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minus labore dolores esse. Odit similique doloribus tenetur doloremque, sunt commodi in ipsa repudiandae debitis deleniti blanditiis quibusdam quaerat neque asperiores ea.</p>
             <div class="social-icons">
