--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
                 <a href="#"><i class="fa-brands fa-linkedin"></i></a>
                 <a href="#"><i class="fa-brands fa-github"></i></a>
                 <a href="#"><i class="fa-brands fa-youtube"></i></a>
-                <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                <a href="https://www.instagram.com/gilsonped/"><i class="fa-brands fa-instagram"></i></a>
             </div>
-            <a href="#" class="btn">Descubra Mais</a>
+            <a href="https://docs.google.com/document/d/1-hFVZzDbiyrMJD2bwxGbe41ncSHDc_Kmp_DLS8hTwvE/edit?usp=sharing" class="btn">Baixar Curriculo</a>
         </div>
     </section>
 </body>
