--- a/index.html
+++ b/index.html
@@ -1,42 +1,88 @@
 <!DOCTYPE html>
 <html lang="en">
-    
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
-    <link rel="stylesheet" href="style.css">
     <title>GP - Gilson Pedroso</title>
+	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href"https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"> 
 </head>
 <body>
-    <header>
-        <a href="#" class="logo">Gilson</a>
-
-        <nav>
-            <a href="#" class="active"> Home</a>
-            <a href="#" >Serviços</a>
-            <a href="#" >Habilidades</a>
-            <a href="#" >Education</a>
-            <a href="#" >Experience</a>
-            <a href="#" >Contatos</a>
-        </nav>
+<!--Menu Principal-->
+    <header class="header">
+        <a href="#home" class="logo"><span>Gilson Pedroso</span></a>
+	
+	<ul class="nav-links">
+		<li> 
+            		<a href="#home"> Sobre </a>
+		</li>
+		<li> 
+            		<a href="#experiencias">Experiências</a>
+		</li>
+		<li> 
+            		<a href="#projetos">Projetos</a>
+		</li>
+		<li> 
+            		<a href="#Contatos">Contatos</a>
+		</li>	
+        </ul>
+	
+	<i class="fa-solid fa-bars" id="menu-icon"></i>
+	
+	<button class="visit-btn">Whatsapp</button>
     </header>
-    <section class="home">
-        <div class="home-img">
-            <img src="main.jpg" alt="">
-        </div>
-        <div class="home-content">
-            <h1>Olá, Eu sou <span>Gilson</span></h1>
-            <h3 class="typing-text">Eu sou <span></span></h3>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minus labore dolores esse. Odit similique doloribus tenetur doloremque, sunt commodi in ipsa repudiandae debitis deleniti blanditiis quibusdam quaerat neque asperiores ea.</p>
-            <div class="social-icons">
-                <a href="#"><i class="fa-brands fa-linkedin"></i></a>
-                <a href="#"><i class="fa-brands fa-github"></i></a>
-                <a href="#"><i class="fa-brands fa-youtube"></i></a>
-                <a href="https://www.instagram.com/gilsonped/"><i class="fa-brands fa-instagram"></i></a>
-            </div>
-            <a href="https://docs.google.com/document/d/1-hFVZzDbiyrMJD2bwxGbe41ncSHDc_Kmp_DLS8hTwvE/edit?usp=sharing" class="btn">Baixar Curriculo</a>
-        </div>
-    </section>
+
+<!--Secção Sobre mim - colocar efeito escrevendo-->
+	<section id="about" class="about">
+		<div class="about-container">
+			<img src="image.jpg" alt="">
+			
+			<div class="info-box">
+				<div class="text">
+					<h3>Olá, Eu sou</h3>
+					<h1>Gilson Pedroso</h1>
+					<span>Frontend Developer</span>
+
+		</div>
+	</section>
+
+
+
+<!--Secção de Experiências-->
+	<section id="experience" class="experience">
+		<h2 class="section-title">Experiências</h2>
+
+		<div class="experience-info"> 
+			<div class"grid-card">
+				<i class="fa-solid fa-file-code"></i>
+				<span>Aprendiz de Gestão em Inteligência Artificial</span>
+				<h3>1.3 Anos</h3>
+				<p>teste 1 .</p>
+			</div>
+			<div class"grid-card">
+				<i class="fa-solid fa-laptop"></i>
+				<span>Frontend Development</span>
+				<h3>5 Anos</h3>
+				<p>teste 2 .</p>
+			</div>
+			<div class"grid-card">
+				<i class="fa-solid fa-laptop"></i>
+				<span>Frontend Development</span>
+				<h3>5 Anos</h3>
+				<p>teste 3.</p>
+			</div>
+			<div class"grid-card">
+				<i class="fa-solid fa-laptop"></i>
+				<span>Agente de Proteção e Defesa Civil - Jaboatão</span>
+				<h3>1 Anos - Atualmente </h3>
+				<p>teste 4.</p>
+			</div>
+
+		</div>
+
+	</section>
+
+	<script src="script.js"></script>
+    
 </body>
 </html>
