--- a/index.html
+++ b/index.html
@@ -124,6 +124,7 @@
 		<li> 
             		<a href="#Contatos">Contatos</a>
 		</li>
+		<p class="copyright"> Todo os Dirietos Autorais reservado | Gilson Pedroso</p>
 	</footer>
 				
 	<script src="script.js"></script>
