--- a/index.html
+++ b/index.html
@@ -35,13 +35,26 @@
 <!--Secção Sobre mim - colocar efeito escrevendo-->
 	<section id="about" class="about">
 		<div class="about-container">
-			<img src="image.jpg" alt="">
+			<img src="image.png" alt="">
 			
 			<div class="info-box">
+
 				<div class="text">
 					<h3>Olá, Eu sou</h3>
 					<h1>Gilson Pedroso</h1>
 					<span>Frontend Developer</span>
+				</div>
+
+				<div class="btn-group">
+					<div class="btn">Download CV</div>
+					<div class="btn">Contatos</div>
+				</div>
+
+				<div class="socials">
+					<i class="fa-brands fa-github">u</i>
+					<i class="fa-brands fa-linkedin">u</i>
+				</div>
+			</div> 
 
 		</div>
 	</section>
